# preface

./: .gitignore  .ocamlformat  CHANGES.md  CREDITS.md  LICENSE  Makefile  README.md  dune-project  esy.json  preface.opam
.github/: CONTRIBUTING.md
.github/dot/: cut.dot  specs.dot
.github/workflows/: build.yml  deploy-doc.yml  test.yml
esy.lock/: index.json
guides/: README.md  dune  error_handling.md  freer_effect_handling.md  option_instantiation.md  test.md
lib/: dune  index.mld
lib/preface/: applicative.ml  applicative.mli  comonad.ml  comonad.mli  dune  free.ml  free.mli  freeEr.mli  freeer.ml  freeer.mli  fun.ml  fun.mli  functor.ml  functor.mli  identity.ml  identity.mli  monad.ml  monad.mli  preface.ml  selective.ml  selective.mli  stream.ml  stream.mli
lib/preface_core/: dune  either.ml  either.mli  fun.ml  fun.mli  monoid.ml  monoid.mli  nonempty_list.ml  nonempty_list.mli  requirements.mli  shims.ml  shims.mli  void.ml  void.mli
lib/preface_laws/: alt.ml  alternative.ml  applicative.ml  apply.ml  arrow.ml  arrow_alt.ml  arrow_apply.ml  arrow_choice.ml  arrow_plus.ml  arrow_zero.ml  bifunctor.ml  bind.ml  bounded_join_semilattice.ml  bounded_lattice.ml  bounded_meet_semilattice.ml  category.ml  choice.ml  closed.ml  comonad.ml  contravariant.ml  decidable.ml  divisible.ml  dune  foldable.ml  functor.ml  functor.mli  indexed_alt.ml  indexed_alternative.ml  indexed_applicative.ml  indexed_apply.ml  indexed_bind.ml  indexed_comonad.ml  indexed_foldable.ml  indexed_functor.ml  indexed_monad.ml  indexed_monad_plus.ml  indexed_selective.ml  invariant.ml  join_semilattice.ml  lattice.ml  (+15 more)
lib/preface_make/: alt.ml  alt.mli  alternative.ml  alternative.mli  applicative.ml  applicative.mli  applicative2.ml  applicative2.mli  applicative3.ml  applicative3.mli  apply.ml  apply.mli  arrow.ml  arrow.mli  arrow_alt.ml  arrow_alt.mli  arrow_apply.ml  arrow_apply.mli  arrow_choice.ml  arrow_choice.mli  arrow_loop.ml  arrow_loop.mli  arrow_plus.ml  arrow_plus.mli  arrow_zero.ml  arrow_zero.mli  bifunctor.ml  bifunctor.mli  bind.ml  bind.mli  bounded_join_semilattice.ml  bounded_join_semilattice.mli  bounded_lattice.ml  bounded_lattice.mli  bounded_meet_semilattice.ml  bounded_meet_semilattice.mli  category.ml  category.mli  choice.ml  choice.mli  (+111 more)
lib/preface_qcheck/: alt.ml  alt.mli  alternative.ml  alternative.mli  applicative.ml  applicative.mli  apply.ml  apply.mli  arrow.ml  arrow.mli  arrow_alt.ml  arrow_alt.mli  arrow_apply.ml  arrow_apply.mli  arrow_choice.ml  arrow_choice.mli  arrow_plus.ml  arrow_plus.mli  arrow_zero.ml  arrow_zero.mli  bifunctor.ml  bifunctor.mli  bind.ml  bind.mli  bounded_join_semilattice.ml  bounded_join_semilattice.mli  bounded_lattice.ml  bounded_lattice.mli  bounded_meet_semilattice.ml  bounded_meet_semilattice.mli  category.ml  category.mli  choice.ml  choice.mli  closed.ml  closed.mli  comonad.ml  comonad.mli  contravariant.ml  contravariant.mli  (+61 more)
lib/preface_specs/: alt.mli  alternative.mli  applicative.mli  applicative2.mli  applicative3.mli  apply.mli  arrow.mli  arrow_alt.mli  arrow_apply.mli  arrow_choice.mli  arrow_loop.mli  arrow_plus.mli  arrow_zero.mli  bifunctor.mli  bind.mli  bounded_join_semilattice.mli  bounded_lattice.mli  bounded_meet_semilattice.mli  category.mli  choice.mli  closed.mli  comonad.mli  contravariant.mli  decidable.mli  divisible.mli  dune  env.mli  foldable.mli  free.mli  free_applicative.mli  free_monad.mli  free_selective.mli  freeer.mli  freer.mli  freer_monad.mli  freer_selective.mli  functor.mli  functor2.mli  functor3.mli  indexed_alt.mli  (+32 more)
lib/preface_stdlib/: Writer.ml  Writer.mli  approximation.ml  approximation.mli  continuation.ml  continuation.mli  dune  either.ml  either.mli  env.ml  env.mli  equivalence.ml  equivalence.mli  exn.ml  exn.mli  fun.ml  fun.mli  identity.ml  identity.mli  list.ml  list.mli  nonempty_list.ml  nonempty_list.mli  option.ml  option.mli  pair.ml  pair.mli  predicate.ml  predicate.mli  preface_stdlib.ml  reader.ml  reader.mli  result.ml  result.mli  seq.ml  seq.mli  state.ml  state.mli  store.ml  store.mli  (+15 more)
lib/specs/: applicative.mli  dune  either.mli  functor.mli  monad.mli  preface_specs.mli  requirements.mli  selective.mli  specs.mli
test/: dune  fun_test.ml  identity_applicative_test.ml  identity_functor_test.ml  identity_monad_test.ml  identity_selective_test.ml  identity_test.ml  nats_comonad_test.ml  numbers_comonad_test.ml  preface_test.ml  stream_comonad_test.ml
test/preface_behaviours_test/: continuation.ml  dune  either.ml  identity.ml  list.ml  misc.ml  nonempty_list.ml  option.ml  preface_behaviours_test.ml  result.ml  state.ml  stream.ml  try.ml  validation.ml
test/preface_core_test/: dune  fun_test.ml  nonempty_list_test.ml  preface_core_test.ml
test/preface_examples_test/: approximation_for_selective.ml  arrow_tutorial.ml  arrow_tutorial.mli  debruijn_reader.ml  decidable_pp.ml  dune  formlet.ml  free_applicative_formlet.ml  free_monad_consoleIO.ml  free_monad_consoleIO_composition.ml  free_selective_pingpong.ml  freer_monad_consoleIO.ml  freer_monad_os_effect.ml  freer_monad_os_explicit_continuation.ml  freer_monad_print_read_or_fail.ml  freer_selective_ping_pong.ml  preface_example_test.ml  shape.ml  template_reader.ml  traced_dependencies.ml  xml_stax_writer.ml
test/preface_laws/: alt.ml  alt.mli  alternative.ml  alternative.mli  applicative.ml  apply.ml  apply.mli  arrow.ml  arrow.mli  arrow_apply.ml  arrow_apply.mli  arrow_choice.ml  arrow_choice.mli  bifunctor.ml  bifunctor.mli  bind.ml  bind.mli  category.ml  category.mli  choice.ml  choice.mli  closed.ml  closed.mli  comonad.ml  comonad.mli  continuation.ml  contravariant.ml  contravariant.mli  dune  either.ml  fun.ml  functor.ml  functor.mli  identity.ml  list.ml  misc.ml  monad.ml  monad.mli  monad_plus.ml  monad_plus.mli  (+26 more)
test/preface_laws_test/: approximation.ml  continuation.ml  continuation_test.ml  dune  either.ml  either_test.ml  equivalence.ml  fun.ml  identity.ml  identity_test.ml  list.ml  list_test.ml  misc.ml  misc.mli  nonempty_list.ml  (+25 more)
(+93 files in other folders)
