opam-version: "2.0"
version: "dev"

maintainer: "xaviervdw@gmail.com"
authors: [
  "Didier Plaindoux <d.plaindoux@free.fr>"
  "Pierre Ruyter <grimfw@gmail.com>"
  "Xavier Van de Woestyne <xaviervdw@gmail.com>"
]

license: "MIT"
tags: ["library" "standard" "monad"]
homepage: "https://github.com/xvw/preface"
dev-repo: "git+https://github.com/xvw/preface.git"
bug-reports: "https://github.com/xvw/preface/issues"

build: [
  [ "dune" "subst" ]
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name ] {with-test}
  [ "dune" "build" "@doc" "-p" name ] {with-doc}
]

depends: [
  "ocaml" { >= "4.08.0" }
  "dune" { >= "2.7.1" }
  "either"
  "alcotest" {with-test}
  "qcheck-core" {with-test}
  "qcheck-alcotest" {with-test}
  "mdx" {with-test}
  "odoc"{with-doc}
]

synopsis: "An opinionated library for function programming (à La Haskell)"
description:"""
Preface is an opinionated library designed to facilitate the
handling of recurring functional programming idioms in OCaml.
"""
