(library
 (name preface_specs)
 (public_name preface.specs)
 (modules_without_implementation
  preface_specs
  types
  functor
  apply
  applicative
  selective
  bind
  monad
  comonad
  traversable
  bifunctor
  free_applicative
  free_monad
  freer_monad
  free_selective
  freer_selective
  semigroup
  monoid
  foldable
  alt
  alternative
  monad_plus
  invariant
  contravariant
  divisible
  decidable
  category
  arrow
  arrow_zero
  arrow_alt
  arrow_plus
  arrow_choice
  arrow_apply
  profunctor
  strong
  choice
  closed
  reader
  writer
  state
  store
  env
  traced
  semigroupoid
  meet_semilattice
  bounded_meet_semilattice
  join_semilattice)
 (libraries preface_core))
