(library
 (name preface_laws)
 (public_name preface.laws)
 (synopsis "Encoding laws as a set of tests")
 (modules aliases functor applicative selective monad comonad bifunctor
   semigroup monoid alternative monad_plus alt contravariant category arrow
   arrow_choice arrow_apply profunctor strong choice closed)
 (libraries qcheck-core qcheck-alcotest preface.core preface.specs
   preface.make preface.stdlib preface.qcheck))

(test
 (name preface_laws_suite)
 (modules misc identity continuation option list nonempty_list try either
   stream result validation validate fun pair predicate preface_laws_suite)
 (libraries preface.qcheck preface.stdlib alcotest preface.laws))
